change le-propdata to a jar project